--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "overtrue/laravel-filesystem-qiniu": "^1.0",
+        "overtrue/laravel-lang": "~3.0",
         "overtrue/laravel-wechat": "~4.0",
         "predis/predis": "^1.1"
     },
