--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
+        "medz/cors": "^1.4",
         "overtrue/laravel-filesystem-qiniu": "^1.0",
         "overtrue/laravel-lang": "~3.0",
         "overtrue/laravel-wechat": "~4.0",
