--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,8 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.6.*",
+        "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "medz/cors": "^1.4",
         "overtrue/laravel-filesystem-qiniu": "^1.0",
         "overtrue/laravel-lang": "~3.0",
         "overtrue/laravel-wechat": "~4.0",
@@ -18,6 +17,7 @@
     "require-dev": {
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
+        "laravel/telescope": "^2.1",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
         "phpunit/phpunit": "^7.0"
