--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,16 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.8.*",
+        "fruitcake/laravel-cors": "^1.0",
+        "laravel/framework": "^6.0",
+        "laravel/helpers": "^1.1",
+        "laravel/passport": "^8.4",
         "laravel/tinker": "^1.0",
         "overtrue/laravel-filesystem-qiniu": "^1.0",
         "overtrue/laravel-lang": "~3.0",
-        "overtrue/laravel-wechat": "~4.0",
-        "predis/predis": "^1.1"
+        "overtrue/laravel-wechat": "~5.0",
+        "predis/predis": "^1.1",
+        "spatie/laravel-permission": "^3.6"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
