--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,10 @@
         "laravel/tinker": "^1.0",
         "overtrue/laravel-filesystem-qiniu": "^1.0",
         "overtrue/laravel-lang": "~3.0",
+        "overtrue/laravel-pinyin": "~3.0",
         "overtrue/laravel-wechat": "~5.0",
         "predis/predis": "^1.1",
+        "qcloudsms/qcloudsms_php": "^0.1.4",
         "spatie/laravel-permission": "^3.6"
     },
     "require-dev": {
